001-button-text-staggered-sliding-effects  提交

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "daily practice of css3",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,17 @@
   "bugs": {
     "url": "https://github.com/rubyLiuqq/css3-Daily-Practice/issues"
   },
-  "homepage": "https://github.com/rubyLiuqq/css3-Daily-Practice#readme"
+  "homepage": "https://github.com/rubyLiuqq/css3-Daily-Practice#readme",
+  "dependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "express": "^4.16.3",
+    "opn": "^5.3.0",
+    "style-loader": "^0.22.1",
+    "webpack": "^4.17.1"
+  }
 }
