--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "opn": "^5.3.0",
+    "path": "^0.12.7",
     "style-loader": "^0.22.1",
     "webpack": "^4.17.1"
   }
